<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/doctor_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctor_name" />

    <EditText
        android:id="@+id/centro_medico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctor_surname" />

    <EditText
        android:id="@+id/dni_nie_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/centro_medico" />

    <EditText
        android:id="@+id/phone_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_doctor" />

    <EditText
        android:id="@+id/license_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_doctor" />

    <EditText
        android:id="@+id/mail_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_doctor" />

    <EditText
        android:id="@+id/place_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dni_nie_doctor" />

    <EditText
        android:id="@+id/doctor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_doctorname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/doctor_name"
        app:layout_constraintEnd_toStartOf="@+id/doctor_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/doctor_name" />

    <TextView
        android:id="@+id/txt_doctorsurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Surnames"
        app:layout_constraintBottom_toBottomOf="@+id/doctor_surname"
        app:layout_constraintEnd_toStartOf="@+id/doctor_surname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/doctor_surname" />

    <TextView
        android:id="@+id/txt_clinica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="18dp"
        android:text="@string/centro_trabajo"
        app:layout_constraintBottom_toBottomOf="@+id/centro_medico"
        app:layout_constraintEnd_toStartOf="@+id/centro_medico"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/centro_medico" />

    <TextView
        android:id="@+id/txt_dninieDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/identity_card"
        app:layout_constraintBottom_toBottomOf="@+id/dni_nie_doctor"
        app:layout_constraintEnd_toStartOf="@+id/dni_nie_doctor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dni_nie_doctor" />

    <TextView
        android:id="@+id/txt_placeDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="Localidad"
        app:layout_constraintBottom_toBottomOf="@+id/place_doctor"
        app:layout_constraintEnd_toStartOf="@+id/place_doctor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/place_doctor" />

    <TextView
        android:id="@+id/txt_mailDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="Correo"
        app:layout_constraintBottom_toBottomOf="@+id/mail_doctor"
        app:layout_constraintEnd_toStartOf="@+id/mail_doctor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mail_doctor" />

    <TextView
        android:id="@+id/txt_phoneDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="Teléfono"
        app:layout_constraintBottom_toBottomOf="@+id/phone_doctor"
        app:layout_constraintEnd_toStartOf="@+id/phone_doctor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/phone_doctor" />

    <TextView
        android:id="@+id/txt_numcolegiado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="Número de colegiado"
        app:layout_constraintBottom_toBottomOf="@+id/license_number"
        app:layout_constraintEnd_toStartOf="@+id/phone_doctor"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/license_number" />

    <Button
        android:id="@+id/button_registro_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="Registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/license_number" />

    <Button
        android:id="@+id/button_eliminar_datos_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="SendRegisterData"
        android:text="Borrar todo"
        app:layout_constraintEnd_toEndOf="@+id/button_registro_doctor"
        app:layout_constraintStart_toStartOf="@+id/button_registro_doctor"
        app:layout_constraintTop_toBottomOf="@+id/button_registro_doctor" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

</android.support.constraint.ConstraintLayout>