<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_borrar_datos_paciente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="SendRegisterData"
        android:text="Borrar todo"
        app:layout_constraintEnd_toEndOf="@+id/button_registro_paciente"
        app:layout_constraintStart_toStartOf="@+id/button_registro_paciente"
        app:layout_constraintTop_toBottomOf="@+id/button_registro_paciente" />

    <Button
        android:id="@+id/button_registro_paciente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="Registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_doctor" />

    <TextView
        android:id="@+id/txt_phonepaciente2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Teléfono"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/phone_doctor"
        app:layout_constraintEnd_toStartOf="@+id/phone_doctor" />

    <TextView
        android:id="@+id/txt_surnamepaciente2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Surnames"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/doctor_surname"
        app:layout_constraintEnd_toStartOf="@+id/doctor_surname" />

    <EditText
        android:id="@+id/doctor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/doctor_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctor_name" />

    <TextView
        android:id="@+id/txt_placepaciente2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Localidad"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/place_doctor"
        app:layout_constraintEnd_toStartOf="@+id/place_doctor" />

    <TextView
        android:id="@+id/txt_mailpaciente2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:text="Correo"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/mail_doctor"
        app:layout_constraintEnd_toStartOf="@+id/mail_doctor" />

    <EditText
        android:id="@+id/centro_medico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctor_surname" />

    <EditText
        android:id="@+id/phone_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textEmailSubject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_doctor" />

    <EditText
        android:id="@+id/dni_nie_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/centro_medico" />

    <TextView
        android:id="@+id/txt_dninie_paciente2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/identity_card"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/dni_nie_doctor"
        app:layout_constraintEnd_toStartOf="@+id/dni_nie_doctor" />

    <EditText
        android:id="@+id/place_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dni_nie_doctor" />

    <EditText
        android:id="@+id/mail_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_doctor" />

    <TextView
        android:id="@+id/txt_clinicadoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Clinica Doctor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/centro_medico"
        app:layout_constraintEnd_toStartOf="@+id/centro_medico" />

    <TextView
        android:id="@+id/txt_namepaciente2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/doctor_name"
        app:layout_constraintEnd_toStartOf="@+id/doctor_name" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
</android.support.constraint.ConstraintLayout>